# tiago_dual_cartesio_config

./: .gitignore  CMakeLists.txt  README.md  package.xml
capsules/: create_acm.sh
capsules/launch/: visualizer.launch  viz.rviz
capsules/srdf/: tiago_dual_capsules.acm  tiago_dual_capsules.srdf
capsules/urdf/: tiago_dual.urdf  tiago_dual_capsules.rviz  tiago_dual_capsules.urdf
launch/: cartesio.launch  demo_recorder.launch  joystick_controller.launch  teleop.launch  teleop_or_policy.launch  viz.rviz
python/: demo_recorder.py  joystick_controller.py  ros_control_bridge.py  teleop_bridge.py  teleop_gripper_bridge.py  teleop_or_policy_bridge.py
python/demo/: postprocess_demo.py
robots/: tiago_dual.srdf  tiago_dual.urdf.xacro
stack/: tiago_dual.stack
