<?xml version="1.0"?>
<package format="2">
  <name>tiago_dual_cartesio_config</name>
  <version>0.0.0</version>
  <description>The tiago_dual_cartesio_config package</description>

  <maintainer email="enrico@todo.todo">enrico</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>  

</package>
